--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@ title: Portfolio · Illustration · Ottawa, ON
 meta: This is a page of awesome illustrations.
 logo: monster.svg
 h1: Icons
-body: These are icons that I made for my personal work. In making these icons, I wanted to create a colourful but cute design to follow my style.
+body: These are illustration I made to the style I personal like to do. Each design was to show my skills and creative view in designing.
 
 image1: angry.svg
 image1-content: Angry Icon of myself
@@ -21,7 +21,7 @@ image03:
 image03-content:
 ---
 
-<h2 class="exa center-text pad-t">Icon Illustrations</h2>
+<h2 class="exa center-text pad-t">Illustrations</h2>
 
 <main class="wrapper">
 
