Add more content to logo

--- a/project-logo.html
+++ b/project-logo.html
@@ -19,8 +19,8 @@ image2-content: Image of branding Guidelines
 image3: logo-design.svg
 image3-content: Logo Design in Scale
 
-image01:
-image01-content:
+image01: eskan-sketch.jpg
+image01-content: Sketch of logo
 image02:
 image02-content:
 image03:
@@ -35,6 +35,8 @@ image03-content:
   {% include body-content.html %}
 
   {% include images.html %}
+
+  {% include images-2.html %}
 
   {% include video.html %}
 
