--- a/project.html
+++ b/project.html
@@ -17,8 +17,7 @@ image01: bag-illustration.png
 image01-content: Landscape Badge
 image02: personal-logo.svg
 image02-content: My Personal Brand Logo
-image03:
-image03-content:
+image03: little-boy.svg
 ---
 
 <h2 class="exa center-text pad-t">Illustrations</h2>
