Update content to projects

--- a/event-branding.html
+++ b/event-branding.html
@@ -4,11 +4,11 @@ title: Portfolio · Event Branding · Ottawa, ON
 meta: This page is an awesome design of event branding of coffee expo.
 logo: event-branding-icon.svg
 h1: Research
-body: This case study was to create a mock event branding for a Coffe Expo.
+body: This case study was to make a mock event branding. The event was a Coffee Epxo. With research; found most coffee events was designed dark and not vibrant.
 h2: Problem
-body-2: The problem was to create something that pulled people in and want to go to this event. Designing a poster, web banners and other contents for this event.
+body-2: The goal was to make a design that followed through the branding and stand out.
 h3: Solution
-body-3: The solution I found woked was to chose a simple illustration style and an eye popping colour. By designing coffee brand that follow throughs the event.
+body-3: Creating a brand that is vibrant with colour and illustrations that meant eventhing coffee.
 image1: event-branding-sketch.jpg
 image1-content: Sketches of the event
 image2: coffee-expo-poster.svg
