--- a/project-logo.html
+++ b/project-logo.html
@@ -6,11 +6,11 @@ meta: This page is an awesome re-design of Eskan Company logo.
 logo: eskan-logo.svg
 
 h1: Research
-body: This case study was to re-design for a company that was outdated and bring it into a more modern look. Through research to keep way from designs that mostly used in the logos.
+body: This case study was to re-design for a company that was outdated. The assignment is a receation of their logo. It would bring in to the modern age. Through research of the company has made the logo have an orignal design.
 h2: Problem
-body-2: The problem was the logo was not up to date with times but also keeping the company in mind.
+body-2: The logo had to meet high quailty of design.  Keeping to the aboriginal roots, but having a cooperate element to the logo.
 h3: Solution
-body-3: By using innovative thinking to come up with a design that was most suitable for the company.
+body-3: By creating the teepee shows the aboriginal roots of the company. The buildings on the left; gave the cooperation element that brought it to the modern time.
 
 image1: original-eskan-logo.jpg
 image1-content: This is the original Logo
