--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@ title: Portfolio · Illustration · Ottawa, ON
 meta: This is a page of awesome illustrations.
 logo: monster.svg
 h1: Icons
-body: These are illustration I made to the style I personal like to do. Each design was to show my skills and creative view in designing.
+body: These illustrations that are showcased to show the style and look in branding my brand. The illustrations are to be fun but cute and simple. Keeping them in simple pattles and shape. For the icons, having the with little detail for their use. Straight the point and cleaning look.
 
 image1: angry.svg
 image1-content: Angry Icon of myself
