--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@ title: Krystyna Macleod · Portfolio · Ottawa, ON
 meta: Homepage of portfolio of graphic designer.
 ---
 
+
+<ul class="skip-links">
+  <li><a href="#nav">Jump to navigation content</a></li>
+  <li><a href="#main">Jump to main content</a></li>
+  <li><a href="#project-cards">Jump to techniques content</a></li>
+  <li><a href="#satellites">Jump to satellites content</a></li>
+</ul>
+
 <h2 class="exa center-text">Portfolio Pieces</h2>
 
 <div class="wrapper push-2">
