add id and roles

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@ meta: Homepage of portfolio of graphic designer.
 <ul class="skip-links">
   <li><a href="#nav">Jump to navigation content</a></li>
   <li><a href="#main">Jump to main content</a></li>
-  <li><a href="#project-cards">Jump to techniques content</a></li>
-  <li><a href="#satellites">Jump to satellites content</a></li>
+  <li><a href="#project-cards">Jump to projects content</a></li>
+  <li><a href="#abouts">Jump to about content</a></li>
 </ul>
 
 <h2 class="exa center-text">Portfolio Pieces</h2>
 
-<div class="wrapper push-2">
+<div class="wrapper push-2" role="main">
   {% include cards.html %}
 </div>
 
