Add image to 404

--- a/404.html
+++ b/404.html
@@ -2,3 +2,9 @@
 layout: default
 meta: This is the 404 page
 ---
+
+<div class="">
+  <img id="unicorn" class="unicorn" src="{site.baseurl}/images/fluffy.unicorn.svg" alt="">
+</div>
+
+<h2></h2>
