--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ meta: This is the 404 page
 ---
 
 <div class="">
-  <img id="unicorn" class="unicorn" src="{site.baseurl}/images/fluffy.unicorn.svg" alt="">
+  <img id="unicorn" class="unicorn img-flex" src="{{site.baseurl}}/images/fluffy-unicorn.svg" alt="">
 </div>
 
 <h2></h2>
