--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@ layout: default
 meta: This is the 404 page
 ---
 
-<div class="">
-  <img id="unicorn" class="unicorn img-flex" src="{{site.baseurl}}/images/fluffy-unicorn.svg" alt="">
-</div>
+<i class="icon i-96">
+  <img id="unicorn" class="img-flex" src="{{site.baseurl}}/images/fluffy-unicorn.svg" alt="">
+</i>
 
 <h2></h2>
