Add svg unicorn

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ meta: This is the 404 page
 ---
 
 <i class="icon i-96">
-  <img id="unicorn" class="img-flex" src="{{site.baseurl}}/images/fluffy-unicorn.svg" alt="">
+  <svg><use xlink:href="{{site.baseurl}}/images/unicorn.svg#the-icon" /></svg>
 </i>
 
 <h2></h2>
