Add svg imade with wrapper

--- a/404.html
+++ b/404.html
@@ -3,8 +3,11 @@ layout: default
 meta: This is the 404 page
 ---
 
-<i class="icon i-96">
-  <svg><use xlink:href="{{site.baseurl}}/images/unicorn.svg#the-icon" /></svg>
-</i>
+<div class="wrapper">
+  <i class="icon i-256">
+    <svg><use xlink:href="{{site.baseurl}}/images/unicorn.svg#the-icon" /></svg>
+  </i>
+</div>
+
 
 <h2></h2>
