--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ meta: This is the 404 page
 
 <div class="wrapper">
   <i class="icon i-256">
-    <svg><use xlink:href="{{site.baseurl}}/images/unicorn.svg#the-icon" /></svg>
+    <svg><use xlink:href="{{site.baseurl}}/images/unicorn.svg" /></svg>
   </i>
 </div>
 
