Add text xenter

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: default
 meta: This is the 404 page
 ---
 
-<div class="wrapper">
+<div class="wrapper text-center">
   <i class="icon i-256">
     <img src="{{site.baseurl}}/images/fluffy-unicorn.svg" alt="">
   </i>
