Mover banner to each page

--- a/event-branding.html
+++ b/event-branding.html
@@ -24,6 +24,8 @@ image03: feather-event.svg
 image03-content: Feather Banner
 ---
 
+{% include banner.html %}
+
 <h2 class="exa center-text pad-t">Event Branding</h2>
 
 <main class="wrapper">
