--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ meta: Homepage of portfolio of graphic designer.
   <li><a href="#abouts">Jump to about content</a></li>
 </ul>
 
+{% include banner.html %}
+
 <h2 class="exa center-text">Portfolio Pieces</h2>
 
 <div class="wrapper push-2" role="main">
