--- a/project-logo.html
+++ b/project-logo.html
@@ -28,6 +28,8 @@ image03-content:
 
 ---
 
+{% include banner.html %}
+
 <h2 class="exa center-text pad-t">Logo Design</h2>
 
 <main class="wrapper">
