--- a/project.html
+++ b/project.html
@@ -20,6 +20,8 @@ image02-content: My Personal Brand Logo
 image03: little-boy.svg
 ---
 
+{% include banner.html %}
+
 <h2 class="exa center-text pad-t">Illustrations</h2>
 
 <main class="wrapper">
