--- a/404.html
+++ b/404.html
@@ -7,7 +7,5 @@ meta: This is the 404 page
   <i class="icon i-256">
     <img src="{{site.baseurl}}/images/fluffy-unicorn.svg" alt="">
   </i>
+  <h2>THE PAGE YOU WERE LOOKING FOR DOES NOT EXIST</h2>s
 </div>
-
-
-<h2>THE PAGE YOU WERE LOOKING FOR DOES NOT EXIST</h2>
