--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@ meta: This is the 404 page
 ---
 
 <div class="wrapper text-center">
-  <i class="icon i-256">
+  <div class="island-2">
     <img src="{{site.baseurl}}/images/fluffy-unicorn.svg" alt="">
-  </i>
-  <h2>THE PAGE YOU WERE LOOKING FOR DOES NOT EXIST</h2>s
+  </div>
+  <h2 class="text-center">THE PAGE YOU WERE LOOKING FOR DOES NOT EXIST</h2>s
 </div>
