Update banner for 404

--- a/404.html
+++ b/404.html
@@ -5,7 +5,6 @@ meta: This is the 404 page
 
 <div class="wrapper text-center">
   <div class="island-2">
-    <img src="{{site.baseurl}}/images/fluffy-unicorn.svg" alt="">
+    <img src="{{site.baseurl}}/images/404-banner" alt="">
   </div>
-  <h2 class="text-center">THE PAGE YOU WERE LOOKING FOR DOES NOT EXIST</h2>s
 </div>
