--- a/404.html
+++ b/404.html
@@ -5,6 +5,6 @@ meta: This is the 404 page
 
 <div class="wrapper text-center">
   <div class="island-2">
-    <img src="{{site.baseurl}}/images/404-banner" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/404-banner" alt="">
   </div>
 </div>
