--- a/404.html
+++ b/404.html
@@ -3,8 +3,6 @@ layout: default
 meta: This is the 404 page
 ---
 
-<div class="wrapper text-center">
-  <div class="island-2">
-    <img class="img-flex" src="{{site.baseurl}}/images/404-banner" alt="">
-  </div>
+<div class="text-center">
+  <img class="img-flex" src="{{site.baseurl}}/images/404-banner" alt="">
 </div>
