--- a/404.html
+++ b/404.html
@@ -4,5 +4,5 @@ meta: This is the 404 page
 ---
 
 <div class="text-center">
-  <img class="img-flex" src="{{site.baseurl}}/images/404-banner" alt="">
+  <img class="img-flex" src="{{site.baseurl}}/images/404-banner.svg" alt="404-banner">
 </div>
