Add motion page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@ meta: Homepage of portfolio of graphic designer.
     </div>
   </div>
 
+  <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2" >
+    <div class="card-image island-1-2">
+      <a href="{{site.baseurl}}/motion" aria-label="This card links to the Motion page" alt="motion Page" id="motion-page" tabindex="0">
+        <div class="push-1-2">
+          <img class="img-flex" src="{{site.baseurl}}/images/" aria-details="#motion" alt="motion page"></img>
+        </div>
+        <div>
+          <h3 class="push-1-8">Cook with Me</h3>
+          <p class="push-1-4 about-text micro">Ui App</p>
+        </div>
+      </a>
+    </div>
+  </div>
+
 </div>
 
 <div>
