Add changes to homepage

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ meta: Homepage of portfolio of graphic designer.
     <div class="card-image island-1-2">
       <a href="{{site.baseurl}}/motion" aria-label="This card links to the Motion page" alt="motion Page" id="motion-page" tabindex="0">
         <div class="push-1-2">
-          <img class="img-flex" src="{{site.baseurl}}/images/" aria-details="#motion" alt="motion page"></img>
+          <img class="img-flex" src="{{site.baseurl}}/images/motion.png" aria-details="#motion" alt="motion page"></img>
         </div>
         <div>
-          <h3 class="push-1-8">Cook with Me</h3>
-          <p class="push-1-4 about-text micro">Ui App</p>
+          <h3 class="push-1-8">Motion</h3>
+          <p class="push-1-4 about-text micro">Motion Graphic</p>
         </div>
       </a>
     </div>
