Fix name in video

--- a/motion.html
+++ b/motion.html
@@ -11,7 +11,7 @@ meta: Awesome motion graphic.
 <main class="wrapper">
 
   <div class="embed embed-4by3 push-2">
-    <video class="embed-item" muted loop autoplay src="{{site.baseurl}}/images/5-seconds.mp4" atl="motion video"></video>
+    <video class="embed-item" muted loop autoplay src="{{site.baseurl}}/images/5-seconds-strong.mp4" atl="motion video"></video>
   </div>
 
   <div class="embed embed-4by3">
