--- a/motion.html
+++ b/motion.html
@@ -18,4 +18,12 @@ meta: Awesome motion graphic.
     <video class="embed-item" muted loop autoplay src="{{site.baseurl}}/images/logo-animation.mp4" atl="Logo Animation of Eskan Logo"></video>
   </div>
 
+  <div class="embed embed-4by3">
+    <video class="embed-item" muted loop autoplay src="{{site.baseurl}}/images/walk-cycle.mp4" atl="character walk cycle"></video>
+  </div>
+
+  <div class="embed embed-4by3">
+    <video class="embed-item" muted loop autoplay src="{{site.baseurl}}/images/rotoscoping.mp4" atl="rotoscoping"></video>
+  </div>
+
 </main>
